# web-prover

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  Makefile  PLUTOENGINEERING.md  PROVISIONING_PROFILE.mobileprovision  README.md  SUMMARY.md  _Cargo.toml  book.toml  build.rs  circomkit_notes.md  codecov.yml  deploy-debug-tee.sh  notary-config.yaml  notes.md  package-lock.json  proof.r1cs  rust-toolchain.toml  taplo.toml  tee-debug-deploy.sh  test.r1cs  tester.rs  webpack.config.js  webproof.json
client/: Cargo.toml  README.md  build.rs  webproof.json
client/.cargo/: config.toml
client/_src/: lib.rs
client/_src/client/: _Cargo.toml  _mod.rs  config.rs  tlsnotary.rs
client/src/: circuits.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  notary.rs  origo.rs  origo_native.rs  origo_wasm32.rs  proof.rs  prover.rs  prover_wasm32.rs  proxy.rs  tee.rs  tee_native.rs  tee_wasm32.rs  tls.rs  tlsn.rs  tlsn_native.rs  tlsn_wasm32.rs  tlsnotary.rs  wasm_utils.rs
client/src/tls_client_async2/: conn.rs  mod.rs
client_ios/: Cargo.toml
client_ios/demo/: README.md  TestPlan.xctestplan
client_ios/demo/demo/: ContentView.swift  demoApp.swift
client_ios/demo/demo-app-clip/: ContentView.swift  demo-app-clip.entitlements  demo_app_clipApp.swift
client_ios/demo/demo.xcodeproj/: project.pbxproj
client_ios/demo/test/: proverTest.swift  test.swift
client_ios/headers/: libclient_ios.h  module.modulemap
client_ios/src/: lib.rs
client_wasm/: Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  webdriver.json  webpack.config.js
client_wasm/.cargo/: config.toml
client_wasm/demo/: .gitignore  README.md  package-lock.json  package.json  pkg  playwright.config.js  webpack.config.js
client_wasm/demo/js/: config.js  index.js  proof.js  witness.js
client_wasm/demo/scripts/: generate-config.js  test.js
client_wasm/demo/static/: build  index.html
client_wasm/demo/tests/: proof.spec.js
client_wasm/e2e/: playwright.config.ts  server.js  test-init.spec.ts
client_wasm/js/: index.js
client_wasm/public/: test-worker.js  test.html
client_wasm/src/: lib.rs  prover.rs  requests.rs
client_wasm/tests/: wasm.rs
client_wasm/web/: README.md  webpack.config.js
client_wasm/web/static/: index.html
core/: Cargo.toml
core/fixtures/: coinbase.json  website.html
core/src/: error.rs  errors.rs  frame.rs  hash.rs  http.rs  lib.rs  manifest.rs  proof.rs  template.rs  test_utils.rs
core/src/parser/: common.rs  config.rs  error.rs  errors.rs  mod.rs  predicate.rs  test_fixtures.rs  test_utils.rs
ios-client/: Cargo.toml  Makefile  README.md  build.rs
ios-client/src/: lib.rs  notary.rs
mock_server/: Cargo.toml
mock_server/src/: main.rs
mock_target/: Cargo.toml
mock_target/src/: main.rs
notary/: Cargo.toml  README.md  build.rs
notary/.cargo/: config.toml
notary/src/: _frame.rs  axum_websocket.rs  circuits.rs  config.rs  error.rs  errors.rs  frame.rs  main.rs  manifest.rs  native_client.rs  origo.rs  origo_verifier.rs  proxy.rs  routes.rs  runner.rs  tcp.rs  tee.rs  tls_parser.rs  tlsn.rs  verifier.rs  websocket_proxy.rs  websockets.rs
notary/src/__frame/: __views.rs  _views.rs  views.rs
notary/src/frame/: _sessions.rs  sessions.rs  states.rs  views.rs
nw_connection/: Cargo.toml
nw_connection/src/: lib.rs
proofs/: Cargo.toml  Makefile  README.md  addIntoZeroth.r1cs  build.rs  circom_witness.wtns  circomkit.json  circuits.json  output.json  package-lock.json  package.json  parse_fold.r1cs  parse_fold_batch.r1cs  rust-toolchain.toml  test.r1cs  test_output.json  tsconfig.json
proofs/.cargo/: config.toml
proofs/Nova-Scotia/: Cargo.toml
proofs/Nova-Scotia/src/: lib.rs
proofs/Rust.xcframework/: Info.plist
proofs/add_js/: add.wasm
proofs/aes-gcm-fold_js/: aes-gcm-fold.wasm
proofs/arecibo/: Cargo.toml
proofs/circom-witnesscalc/src/: lib.rs
proofs/circuits/: extract.circom  http_get-response.circom  json_extract.circom  json_parse.circom  json_parse.r1cs  parse_fold.circom  parse_raw.circom  proof.circom
proofs/examples/: add.circom  add.r1cs  aes_fold.json  aes_fold_short.json  aes_http_json_extract.json  http_parse_extract.json  json_extract_byte.json  parse_batch_rwit.json  parse_batch_wasm.json  parse_batch_wc.json  square.circom  square.r1cs  universal.json
proofs/examples/circuit_data/: addIntoZeroth.circom  add_external.circom  aes_gcm_fold.circom  aes_gcm_folds.circom  http_extract.circom  http_get_response.circom  http_lock_headers.circom  http_lock_start_line.circom  json_extract.circom  json_extract.r1cs  json_parse.circom  json_universal_array.circom  parse_fold_batch.circom  parse_fold_batch.r1cs  squareZeroth.r1cs  swap_memory.r1cs  (+2 more)
proofs/headers/: module.modulemap
proofs/mock/: fold.json  mock.json
proofs/parse_fold_batch_js/: parse_fold_batch.wasm
proofs/parse_fold_cpp/: Makefile  parse_fold.cpp
proofs/parse_fold_js/: parse_fold.wasm
proofs/setup/: aes_fold.json  fold_batch.json  fold_byte.json  json_extract_byte.json  test.json
proofs/square_js/: square.wasm
proofs/src/: builder.rs  circuits.rs  compress.rs  constants.rs  errors.rs  handler.rs  lib.rs  main.rs  program.rs  proof.rs  setup.rs  test.rs  tests.rs  witness.rs
proofs/tests/: basic.test.ts
proofs/web_proof_circuits/: aes_gcm_chunk.circom  http_get_response.circom  http_lock_header.circom  json_object_extract.circom  json_parse.circom  json_universal.circom  json_universal_array.circom  json_universal_object.circom  json_universal_old.circom
tests/: Cargo.toml
tests/notary-server/: Cargo.toml
tests/src/: lib.rs
tests/web/: README.md  webpack.config.js
tls/tls-backend/: Cargo.toml
tls/tls-client/: Cargo.toml
tls/tls-client-async/: Cargo.toml
tls/tls-core/: Cargo.toml
tls/tls-proxy/: Cargo.toml
wasm-proxy-client/: Cargo.toml  README.md
wasm-proxy-client/src/: hyper_io.rs  lib.rs
web-prover-core/: Cargo.toml  REMOVE_ME
web-prover-core/fixtures/: claude_shannon.html
web-prover-core/src/: errors.rs  http.rs  lib.rs  manifest.rs  template.rs  test_utils.rs
(+309 files in other folders)
