[workspace.package]
name   ="webprover"
edition="2021"

[workspace]
members =["client", "client_ios", "client_wasm", "notary", "proofs", "web-prover-core", "tests"]
resolver="2"

[workspace.metadata]
# https://github.com/pluto/web-prover-circuits/releases
web_prover_circuits_version="0.10.0"

[workspace.dependencies]
# Local re-exporting
client         ={ path="client" }
proofs         ={ path="proofs" }
notary         ={ path="notary" }
web-prover-core={ path="web-prover-core" }
# Serde
serde     ={ version="1.0.204", features=["derive"] }
serde_json="1.0.120"
# Logging
tracing="0.1.40"
tracing-subscriber={ version="0.3.18", features=["env-filter"] }
tlsn-verifier={ git="https://github.com/tlsnotary/tlsn.git", tag="v0.1.0-alpha.4" }
tlsn-prover={ git="https://github.com/tlsnotary/tlsn.git", tag="v0.1.0-alpha.4", features=[
  "tracing",
] }
tlsn-core={ git="https://github.com/tlsnotary/tlsn.git", tag="v0.1.0-alpha.4" }
tls-client={ git="https://github.com/tlsnotary/tlsn.git", tag="v0.1.0-alpha.4", package="tlsn-tls-client" }

tls-client2       ={ git="https://github.com/pluto/tls-origo-legacy", package="tls-client" }
tls-core          ={ git="https://github.com/pluto/tls-origo-legacy", package="tls-core" }
rayon             ="1.10.0"
wasm-bindgen-rayon="=1.2.1"
futures           ="0.3"

caratls_ekm_server                          ={ git="https://github.com/pluto/caratls.git", rev="2f4631af7400eafec7a533b72d1d460fa5a66db3" }
caratls_ekm_google_confidential_space_server={ git="https://github.com/pluto/caratls.git", rev="2f4631af7400eafec7a533b72d1d460fa5a66db3" }
caratls_ekm_client                          ={ git="https://github.com/pluto/caratls.git", rev="2f4631af7400eafec7a533b72d1d460fa5a66db3" }
caratls_ekm_google_confidential_space_client={ git="https://github.com/pluto/caratls.git", rev="2f4631af7400eafec7a533b72d1d460fa5a66db3" }

# CLI
clap={ version="4.5.13", features=["derive"] }
# errors
thiserror="1.0.61"

# HTTP
hyper         ={ version="1.6", features=["full"] }
hyper-util    ={ version="0.1", features=["full"] }
http-body-util="0.1"

# Async
tokio       ={ version="1.39.1", features=["full"] }
tokio-util  ={ version="0.7" }
tokio-rustls={ version="0.26.0", default-features=false, features=["logging", "tls12"] }

# circuits witness generator
web-proof-circuits-witness-generator={ git="https://github.com/pluto/web-prover-circuits", rev="0a09df087612d45fa3b0d5914d93c72417edb58b" }

uuid       ={ version="1.10.0", default-features=false, features=["v4", "serde"] }
derive_more={ version="2.0.1", features=["full"] }
num-bigint ="0.4"
ff         ={ version="0.13", default-features=false, features=["derive"] }
tiny-keccak={ version="2.0.2", features=["keccak"] }
url        ="2.5.4"

[profile.dev]
opt-level      =1
split-debuginfo="unpacked"
incremental    =true

[profile.release]
opt-level    =0
lto          =false
codegen-units=1
panic        ="abort"
strip        =true
debug        =true    # Propagate more information up through FFI

# [patch."https://github.com/pluto/web-prover-circuits"]
# web-proof-circuits-witness-generator={ path="../web-prover-circuits/witness-generator" }
