[workspace.package]
name   ="webprover"
edition="2021"

[workspace]
members =["client", "notary", "web-prover-core", "tests"]
resolver="2"

[workspace.dependencies]
# Local re-exporting
client         ={ path="client" }
notary         ={ path="notary" }
web-prover-core={ path="web-prover-core" }
# Serde
serde     ={ version="1.0.204", features=["derive"] }
serde_json="1.0.120"
# Logging
tracing           ="0.1.40"
tracing-subscriber={ version="0.3.18", features=["env-filter"] }
rayon             ="1.10.0"
futures           ="0.3"

# CLI
clap={ version="4.5.13", features=["derive"] }
# errors
thiserror="1.0.61"

# HTTP
hyper         ={ version="1.6", features=["full"] }
hyper-util    ={ version="0.1", features=["full"] }
http-body-util="0.1"

# Async
tokio       ={ version="1.39.1", features=["full"] }
tokio-util  ={ version="0.7" }
tokio-rustls={ version="0.26.0", default-features=false, features=["logging", "tls12"] }

uuid       ={ version="1.10.0", default-features=false, features=["v4", "serde"] }
derive_more={ version="2.0.1", features=["full"] }
url        ="2.5.4"
chrono     ="0.4"

tracing-test="0.2"

[profile.dev]
opt-level      =1
split-debuginfo="unpacked"
incremental    =true

[profile.release]
opt-level    =0
lto          =false
codegen-units=1
panic        ="abort"
strip        =true
debug        =true    # Propagate more information up through FFI
