[workspace]
members =["client", "notary", "core", "tests", "executor"]
resolver="2"

[workspace.dependencies]
# Local re-exporting
web-prover-client  ={ path="client" }
web-prover-core    ={ path="core" }
web-prover-executor={ path="executor" }
web-prover-notary  ={ path="notary" }
# Serde
serde     ={ version="1.0.204", features=["derive"] }
serde_json="1.0.120"
# Logging
futures           ="0.3"
rayon             ="1.10.0"
tracing           ="0.1.40"
tracing-subscriber={ version="0.3.18", features=["env-filter"] }

# CLI
clap={ version="4.5.13", features=["derive"] }
# errors
thiserror="1.0.61"

# HTTP
http-body-util="0.1"
hyper         ={ version="1.6", features=["full"] }
hyper-util    ={ version="0.1", features=["full"] }

# Async
tokio       ={ version="1.39.1", features=["full"] }
tokio-rustls={ version="0.26.0", default-features=false, features=["logging", "tls12"] }
tokio-util  ={ version="0.7" }

chrono     ="0.4"
derive_more={ version="2.0.1", features=["full"] }
url        ="2.5.4"
uuid       ={ version="1.10.0", default-features=false, features=["v4", "serde"] }

tracing-test="0.2"

tempfile    ="3.18.0"
wait-timeout="0.2.1"

[profile.dev]
incremental    =true
opt-level      =1
split-debuginfo="unpacked"

[profile.release]
codegen-units=1
debug        =true    # Propagate more information up through FFI
lto          =false
panic        ="abort"
strip        =true
