[package]
name   ="client"
version="0.7.0"
edition="2021"
build  ="build.rs"
publish=false

[features]
default=["tee-dummy-token-verifier"]

websocket=[]
tracing  =[]

# used to disable cert verification, useful for development
unsafe_skip_cert_verification=[]

tee-dummy-token-verifier                    =[]
tee-google-confidential-space-token-verifier=[]

# Shared dependencies for all targets
[dependencies]
caratls_ekm_client={ workspace=true }
web-prover-core   ={ workspace=true }
bytes="1"
webpki-roots="0.26.1"
pki-types   ={ package="rustls-pki-types", version="1.7" }
# Serde
serde     ={ workspace=true }
serde_json={ workspace=true }
# Web
hex           ="0.4"
url           ="2.5"
hyper         ={ workspace=true, features=["client", "http1"] }
http-body-util={ workspace=true }
# Logging and errors
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }
thiserror         ={ workspace=true }
# Async
futures={ workspace=true }
# Other
base64="0.22.0"
tokio-util={ version="0.7", features=[
  "compat",
] } # compat is used to work with AsyncRead and AsyncWrite from other crates

uuid      ={ workspace=true }
clap      ={ workspace=true }
serde_with={ version="3.12.0", features=["base64"] }

# Web
hyper-util={ workspace=true }
# Async
tokio-rustls={ version="0.26", default-features=false, features=["logging", "tls12"] }
tokio       ={ workspace=true, features=["rt", "rt-multi-thread", "macros", "net", "io-std", "fs"] }
rustls      ={ version="0.23", default-features=false, features=["ring"] }
# TLSN
reqwest={ version="0.12", features=["json", "rustls-tls"] }