[package]
build  ="build.rs"
edition="2021"
name   ="web-prover-client"
publish=false
version="0.7.0"

[features]
default  =[]
tracing  =[]
websocket=[]
# used to disable cert verification, useful for development
unsafe_skip_cert_verification=[]

# Shared dependencies for all targets
[dependencies]
web-prover-core={ workspace=true }

bytes       ="1"
pki-types   ={ package="rustls-pki-types", version="1.7" }
webpki-roots="0.26.1"
# Serde
serde     ={ workspace=true }
serde_json={ workspace=true }
# Web
hex           ="0.4"
http-body-util={ workspace=true }
hyper         ={ workspace=true, features=["client", "http1"] }
url           ="2.5"
# Logging and errors
thiserror         ={ workspace=true }
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }
# Async
futures={ workspace=true }
# Other
base64="0.22.0"
tokio-util={ version="0.7", features=[
  "compat",
] } # compat is used to work with AsyncRead and AsyncWrite from other crates

clap      ={ workspace=true }
serde_with={ version="3.12.0", features=["base64"] }
uuid      ={ workspace=true }

# Web
hyper-util={ workspace=true }
# Async
rustls           ={ version="0.23", default-features=false, features=["ring"] }
tokio            ={ workspace=true, features=["rt", "rt-multi-thread", "macros", "net", "io-std", "fs"] }
tokio-rustls     ={ version="0.26", default-features=false, features=["logging", "tls12"] }
tokio-tungstenite={ workspace=true }
# TLSN
native-tls="0.2.14"
reqwest   ={ version="0.12", features=["json", "rustls-tls"] }

[dev-dependencies]
