[package]
name   ="client_ios"
version="0.7.1"
edition="2021"
build  ="build.rs"
publish=false

[lib]
crate-type=["staticlib"]

[dependencies]
# Local
client={ workspace=true }
# Serde
serde     ={ workspace=true }
serde_json={ workspace=true }
# Logging
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }
# Async
tokio ={ workspace=true }
proofs={ workspace=true }

[build-dependencies]
cargo_metadata="0.19.1"
