[package]
name   ="client_wasm"
version="0.1.0"
edition="2021"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
client    ={ path="../client", features=["websocket"] }
tls-client={ git="https://github.com/tlsnotary/tlsn.git", package="tlsn-tls-client" }
# Web
# hyper-util={ version="0.1", features=["http1"] }
hyper     ={ version="1.1", features=["client", "http1"] }
hyper-util={ version="0.1", features=["http1"] }
## Use the patched ws_stream_wasm to fix the issue https://github.com/najamelan/ws_stream_wasm/issues/12#issuecomment-1711902958
ws_stream_wasm={ version="0.7.4", git="https://github.com/tlsnotary/ws_stream_wasm", rev="2ed12aad9f0236e5321f577672f309920b2aef51" }
# Serde
serde-wasm-bindgen="0.6.5"

# Other
ring          ={ version="0.17", features=["wasm32_unknown_unknown_js"] }
chrono        ="0.4"
elliptic-curve={ version="0.13.5", features=["pkcs8"] }
getrandom     ={ version="0.2", features=["js"] }
js-sys        ="0.3.64"
p256          ={ version="0.13", features=["pem", "ecdsa"] }
rayon         ="1.5"
# time crate: https://crates.io/crates/time
# NOTE: It is required, otherwise "time not implemented on this platform" error happens right after "!@# 2".
# Probably due to tokio's time feature is used in tlsn-prover?
time={ version="0.3.34", features=["wasm-bindgen"] }
# Used to calculate elapsed time.
web-time="1.0"

web-sys={ version="0.3.4", features=[
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "console",
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'Window',
  'Worker',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook={ version="0.1.7" }

webpki-roots        ="0.26.1"
pki-types           ={ package="rustls-pki-types", version="1.7" }
pin-project-lite    ="0.2.4"
wasm-bindgen        ="0.2.87"
wasm-bindgen-futures="0.4.37"
wasm-bindgen-rayon  ="1.0"
tracing-subscriber  ={ version="0.3", features=["time", "env-filter"] }
tracing-web         ="0.1.2"

gloo-utils={ version="0.1", features=["serde"] }
serde_json="1.0"
tracing   ="0.1"

# TLSN
tlsn-prover={ git="https://github.com/tlsnotary/tlsn.git" }
tlsn-core  ={ git="https://github.com/tlsnotary/tlsn.git" }
