[package]
name   ="client_wasm"
version="0.7.1"
edition="2021"
build  ="build.rs"
publish=false

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
client              ={ workspace=true, features=["websocket"] }
proofs              ={ workspace=true }
js-sys              ="0.3.64"
serde-wasm-bindgen  ="0.6.1"
serde_json          ={ workspace=true }
tracing             ={ workspace=true }
wasm-bindgen        ="=0.2.93"
wasm-bindgen-rayon  ={ workspace=true }
wasm-bindgen-futures="=0.4.43"
tracing-subscriber  ={ workspace=true, features=["time"] }
tracing-web         ="0.1.2"

# time crate: https://crates.io/crates/time
# NOTE: It is required, otherwise "time not implemented on this platform" error happens right after "!@# 2".
# Probably due to tokio's time feature is used in tlsn-prover?
time     ={ version="0.3.34", features=["wasm-bindgen"] }
tlsn-core={ workspace=true }

# NOTE: Leacing this here in case we still need it for tlsn flow.
# Use the patched ws_stream_wasm to fix the issue https://github.com/najamelan/ws_stream_wasm/issues/12#issuecomment-1711902958
# ws_stream_wasm={ version="0.7.4", git="https://github.com/tlsnotary/ws_stream_wasm", rev="2ed12aad9f0236e5321f577672f309920b2aef51" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook={ version="0.1.7" }

[dev-dependencies]
wasm-bindgen-test="0.3.34"

[build-dependencies]
cargo_metadata="0.19.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt=[
  "-Oz",
  "--enable-threads",
  "--enable-mutable-globals",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info=true
