[package]
name = "mock_target"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2"
rustls = "0.23.9"
tokio-rustls = "0.26.0"