[package]
name   ="notary"
version="0.7.0"
edition="2021"
build  ="build.rs"

[dependencies]
web-prover-core   ={ workspace=true }
chrono            ={ workspace=true }
client            ={ workspace=true }
hyper             ={ workspace=true, features=["client", "http1", "server"] }
hyper-util        ={ workspace=true }
serde             ={ workspace=true }
serde_json        ={ workspace=true }
rustls            ={ version="0.23.11", default-features=false, features=["logging", "tls12", "std", "ring"] }
tokio             ={ workspace=true }
tokio-util        ={ workspace=true, features=["compat"] }
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }
futures           ={ workspace=true }
futures-util      ="0.3.30"
tokio-rustls      ={ workspace=true, features=["ring"] }
tower-http        ={ version="0.5.2", features=["cors"] }
tower-service     ="0.3.2"
rustls-pemfile    ="2.1.2"
nom               ="7.0"

async-trait     ="0.1.67"
axum            ={ version="0.7", features=["ws", "json"] }
axum-core       ="0.4"
eyre            ="0.6.8"
base64          ="0.21.0"
http            ="1.1"
config          ="0.14.0"
clap            ={ workspace=true }
rustls-acme     ={ version="0.10", default-features=false, features=["ring", "tokio"] }
tokio-stream    ={ version="0.1", features=["net"] }
thiserror       ={ workspace=true }
hex             ="0.4"
rs_merkle       ="1.4.2"
alloy-primitives={ version="0.8.2", features=["k256"] }
k256            ={ version="0.13.3", features=["ecdsa"] }
reqwest         ={ version="0.12", features=["json"] }
uuid            ={ workspace=true }

[dev-dependencies]
tower="0.4.13"
