[package]
build  ="build.rs"
edition="2021"
name   ="web-prover-notary"
version="0.7.0"

[dependencies]
web-prover-client  ={ workspace=true }
web-prover-core    ={ workspace=true }
web-prover-executor={ workspace=true }

chrono            ={ workspace=true }
futures           ={ workspace=true }
futures-util      ="0.3.30"
hyper             ={ workspace=true, features=["client", "http1", "server"] }
hyper-util        ={ workspace=true }
nom               ="7.0"
rustls            ={ version="0.23.11", default-features=false, features=["logging", "tls12", "std", "ring"] }
rustls-pemfile    ="2.1.2"
serde             ={ workspace=true }
serde_json        ={ workspace=true }
tokio             ={ workspace=true }
tokio-rustls      ={ workspace=true, features=["ring"] }
tokio-util        ={ workspace=true, features=["compat"] }
tower-http        ={ version="0.5.2", features=["cors"] }
tower-service     ="0.3.2"
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }

alloy-primitives={ version="0.8.2", features=["k256"] }
async-trait     ="0.1.67"
axum            ={ workspace=true }
axum-core       ={ workspace=true }
base64          ="0.21.0"
clap            ={ workspace=true }
config          ="0.14.0"
eyre            ="0.6.8"
hex             ="0.4"
http            ="1.1"
k256            ={ version="0.13.3", features=["ecdsa", "pem"] }
reqwest         ={ version="0.12", features=["json"] }
rs_merkle       ="1.4.2"
rustls-acme     ={ version="0.10", default-features=false, features=["ring", "tokio"] }
thiserror       ={ workspace=true }
tokio-stream    ={ version="0.1", features=["net"] }
uuid            ={ workspace=true }

[dev-dependencies]
tower="0.4.13"
