[package]
name   ="proofs"
version="0.6.0"
edition="2021"
publish=false
build  ="build.rs"

[dependencies]
serde      ={ workspace=true }
serde_json ={ workspace=true }
thiserror  ={ workspace=true }
tracing    ={ workspace=true }
tls-client2={ workspace=true } # a bit of an odd dependency to have in here imo # TODO: Fix this
derive_more={ workspace=true }

hex                                 ="0.4"
client-side-prover                  ={ git="https://github.com/pluto/client-side-prover", rev="8e7eb839e901dcee416179116bb0f9c4f7ae683c" }
ff                                  ={ workspace=true }
bellpepper-core                     ="0.4"
halo2curves                         ="0.6.1"
web-proof-circuits-witness-generator={ workspace=true }
web-prover-core                     ={ workspace=true }

byteorder ="1.5"
num-bigint={ workspace=true }
itertools ="0.13"

bincode="1.3"

tokio={ version="1.39.1", features=["rt", "macros"] }

#- Wasm target configuration ----------------------------------------------------------------------#
[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen  ="0.6.5"
wasm-bindgen        ="0.2.87"
js-sys              ="0.3.64"
wasm-bindgen-futures="0.4.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
circom_witnesscalc={ git="https://github.com/pluto/circom-witnesscalc" } # Fork is needed apparently??

[dev-dependencies]
tracing-test="0.2.5"
tempdir     ="0.3.7"

[build-dependencies]
cargo_metadata="0.19.1"

[features]
verify-steps=[]
timing      =[]
