[workspace]
members = ["notary-server/", "tester/"]
resolver = "2"

[workspace.dependencies]
# CLI
clap = { version = "4.5.7", features = ["derive"] }

[patch."https:/github.com/pluto/tlsn.git"]
tlsn-prover = { path = "../../tlsn/tlsn/tlsn-prover" }
tlsn-core = { path = "../../tlsn/tlsn/tlsn-core"}
tlsn-tls-client = { path = "../../tlsn/components/tls/tls-client" }