[package]
name = "wasm-proxy-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
ws_stream_wasm = "0.7.4"
url = "2.5.0"
futures = { version = "0.3.30", default-features = false }

tlsn-tls-client = {  git = "https://github.com/tlsnotary/tlsn.git" }
tlsn-tls-client-async = { git = "https://github.com/tlsnotary/tlsn.git" }

pin-project-lite = "0.2.4"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["http1"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
http-body-util = "0.1"

webpki-roots = "0.26.1"
pki-types = { package = "rustls-pki-types", version = "1.7" }