[package]
name = "notary-server"
version = "0.1.0-alpha.6"
edition = "2021"

[dependencies]

async-tungstenite = { version = "0.25", features = ["tokio-native-tls"] }
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24.1" }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ws_stream_tungstenite = { version = "0.13.0", features = ["tokio_io"] }

async-trait = "0.1.67"
axum = { version = "0.7", features = ["ws"] }
axum-core = "0.4"
axum-macros = "0.4"
base64 = "0.21.0"
chrono = "0.4.31"
csv = "1.3.0"
eyre = "0.6.8"
futures = "0.3"
futures-util = "0.3.28"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
p256 = "0.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.21"
sha1 = "0.10"
structopt = "0.3.26"
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn.git" }
tower = { version = "0.4.12", features = ["make"] }
tower-http = { version = "0.5", features = ["cors"] }
tower-service = "0.3.2"
