[package]
name = "tls-backend"
edition = "2021"

[lib]
name = "tls_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tls-core = { path = "../tls-core" }
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
